--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Vaid",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "^7.32.0",
     "eslint-config-eis-base": "^2.0.0",
     "mocha": "^9.0.3"
