refactor: move stuff around

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test:coverage": "nyc mocha"
   },
   "keywords": [],
   "author": "Vaid",
@@ -20,11 +21,49 @@
     "chai-http": "^4.3.0",
     "eslint": "^7.32.0",
     "eslint-config-eis-base": "^2.0.0",
-    "mocha": "^9.0.3"
+    "mocha": "^9.0.3",
+    "nyc": "^15.1.0"
   },
   "eslintConfig": {
     "extends": [
       "eis-base"
     ]
+  },
+  "nyc": {
+    "all": true,
+    "check-coverage": true,
+    "reporter": [
+      "html",
+      "lcov",
+      "text"
+    ],
+    "exclude": [
+      "coverage",
+      "test",
+      "scratchpad",
+      "samples"
+    ],
+    "branches": 80,
+    "lines": 80,
+    "functions": 80,
+    "statements": 80,
+    "watermarks": {
+      "lines": [
+        80,
+        95
+      ],
+      "functions": [
+        80,
+        95
+      ],
+      "branches": [
+        80,
+        95
+      ],
+      "statements": [
+        80,
+        95
+      ]
+    }
   }
 }
